--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                     </div>
                 </div>
             </div><!--col end-->
-        </div><!--thirdPart end-->
+        </div><!--fourthPart end-->
         <p
             style="color: rgba(255, 255, 255, 0.58);position: relative; top: 100px;  display: flex; justify-content: center; align-items: center; ">
             Copyright © 2024 All rights reserved</p>
